fixed responsive design on tablets.

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -205,7 +205,7 @@
 
   h1 {
     word-break: break-all;
-    @apply text-4xl sm:text-4xl md:text-6xl lg:text-7xl;
+    @apply text-4xl sm:text-4xl md:text-5xl lg:text-7xl;
   }
 
   h2 {
